--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="img/0001.jpg" alt="logo"></a>
+        <a class="navbar-brand" href="#"><span class="px-3">Наташа Флорес</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
@@ -139,7 +139,7 @@
                 <div class="col-xl-7 col-md-6 right-col main-txt">
                     <h2>Хочешь я стану твоим наставником в карьере и личной эффективности для твоего</h2>
                     <p>С теми, кто хочет добиться результатов, я готова делиться ресурсами, практиками и приёмами эффективного управления временем.</p>
-                    <a href="#" class="btn btn-blue d-none">
+                    <a href="https://www.facebook.com/profile.php?id=100005443396592" class="btn btn-blue d-none">
                         ДА, ХОЧУ
                     </a>
                 </div>
@@ -176,7 +176,7 @@
                                 <img class="mr-1" src="img/icons/human.svg">
                                 1000
                             </div>
-                            <a class="link btn btn-blue" href="https://megaproduction.top/online" target="_blank">Подробнее</a>
+                            <a class="link btn btn-blue" href="https://www.facebook.com/profile.php?id=100005443396592" target="_blank">Подробнее</a>
                         </div>
                     </div>
                 </div>
@@ -214,7 +214,7 @@
                                     <td>101</td>
                                     <td>3</td>
                                     <td>6</td>
-                                    <td class="text-right"><a href="https://www.facebook.com/spartavit" class="btn btn-blue" target="_blank">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/profile.php?id=100005443396592" class="btn btn-blue" target="_blank">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">2</th>
@@ -222,7 +222,7 @@
                                     <td>98</td>
                                     <td>6</td>
                                     <td>9</td>
-                                    <td class="text-right"><a href="https://www.facebook.com/spartavit" class="btn btn-blue" target="_blank">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/profile.php?id=100005443396592" class="btn btn-blue" target="_blank">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">3</th>
@@ -230,7 +230,7 @@
                                     <td>11</td>
                                     <td>3</td>
                                     <td>4</td>
-                                    <td class="text-right"><a href="https://www.facebook.com/spartavit" class="btn btn-blue" target="_blank">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/profile.php?id=100005443396592" class="btn btn-blue" target="_blank">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">4</th>
@@ -238,7 +238,7 @@
                                     <td>76</td>
                                     <td>1</td>
                                     <td>11</td>
-                                    <td class="text-right"><a href="https://www.facebook.com/spartavit" class="btn btn-blue" target="_blank">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/profile.php?id=100005443396592" class="btn btn-blue" target="_blank">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">5</th>
@@ -246,7 +246,7 @@
                                     <td>6</td>
                                     <td>1</td>
                                     <td>21</td>
-                                    <td class="text-right"><a href="https://www.facebook.com/spartavit" class="btn btn-blue" target="_blank">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/profile.php?id=100005443396592" class="btn btn-blue" target="_blank">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">6</th>
@@ -254,7 +254,7 @@
                                     <td>61</td>
                                     <td>12</td>
                                     <td>11</td>
-                                    <td class="text-right"><a href="https://www.facebook.com/spartavit" class="btn btn-blue" target="_blank">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/profile.php?id=100005443396592" class="btn btn-blue" target="_blank">Задать вопрос</a></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -320,7 +320,7 @@
                             <tr>
                                 <th scope="row">2</th>
                                 <td>
-                                    <a href="https://p.smartexpert.net/social/mkp85kos" class="media">
+                                    <a href="https://p.smartexpert.net/social/Isaac2019" target="_blank" class="media">
                                         <img src="https://cdn.p.smartexpert.net/platform/production/users/thumb_avatars/f41f0820-d081-11e9-9826-b9f23a76037e.jpg" alt="">
                                         <span>Ицхак Пинтосевич</span>
                                     </a>
@@ -329,12 +329,12 @@
                                 <td>26</td>
                                 <td>26</td>
                                 <td>44</td>
-                                <td class="text-right"><a href="https://p.smartexpert.net/social/mkp85kos" class="btn btn-blue">Подробнее</a></td>
+                                <td class="text-right"><a href="https://p.smartexpert.net/social/Isaac2019" target="_blank" class="btn btn-blue">Подробнее</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">3</th>
                                 <td>
-                                    <a href="https://p.smartexpert.net/social/avtor5sfer1" class="media">
+                                    <a href="https://p.smartexpert.net/social/avtor5sfer1" target="_blank" class="media">
                                         <img src="https://cdn.p.smartexpert.net/platform/production/users/thumb_avatars/ee5427c0-d081-11e9-adc6-f50efb05e0a9.jpg" alt="">
                                         <span>Светлана <br> Муха</span>
                                     </a>
@@ -343,7 +343,7 @@
                                 <td>26</td>
                                 <td>26</td>
                                 <td>54</td>
-                                <td class="text-right"><a href="https://p.smartexpert.net/social/avtor5sfer1" class="btn btn-blue" target="_blank">Подробнее</a></td>
+                                <td class="text-right"><a href="https://p.smartexpert.net/social/avtor5sfer1" target="_blank" class="btn btn-blue" target="_blank">Подробнее</a></td>
                             </tr>
                         </tbody>
                     </table>
@@ -385,7 +385,7 @@
                             <span class="date">12 мая 2019 г. Наташа Флорес</span>
                             <div class="hr"></div>
                             <span class="tags">Личные финансы, Бизнес, Управление</span>
-                            <a href="https://5sfer.com/24474-pochemu-ne-poluchit-sya-ili-kak-sdelat-chtoby-poluchilos.html" class="btn btn-blue" target="_blank">Читать полностью</a>
+                            <a href="http://5sfer.com/24541-kak-nayti-svoyu-nishu-i-monetizirovat-svoy%C3%AB-prizvaniye.html" class="btn btn-blue" target="_blank">Читать полностью</a>
                         </div>
                     </div>
                 </div>
@@ -397,7 +397,7 @@
                             <span class="date">7 мая 2019 г. Наташа Флорес</span>
                             <div class="hr"></div>
                             <span class="tags">Мышление, Личный бренд</span>
-                            <a href="https://5sfer.com/24453-ne-ishchi-prizvaniye.html" class="btn btn-blue" target="_blank">Читать полностью</a>
+                            <a href="https://5sfer.com/24528-pochemu-otlichniki-ostalis-pozadi.html" class="btn btn-blue" target="_blank">Читать полностью</a>
                         </div>
                     </div>
                 </div>
@@ -409,7 +409,7 @@
                             <span class="date">12 мая 2019 г. Наташа Флорес</span>
                             <div class="hr"></div>
                             <span class="tags">Дисциплина, Уверенность</span>
-                            <a href="" class="btn btn-blue">Читать полностью</a>
+                            <a href="https://5sfer.com/24498-sila-zhenskoy-ulybki.html" target="_blank" class="btn btn-blue">Читать полностью</a>
                         </div>
                     </div>
                 </div>
@@ -421,7 +421,7 @@
                             <span class="date">7 мая 2019 г. Константин Лашкевич</span>
                             <div class="hr"></div>
                             <span class="tags">Психология, Мышление, Деньги</span>
-                            <a href="https://5sfer.com/24537-vezeniye-v-biznese-khorosho-ili-plokho.html" class="btn btn-blue" target="_blank">Читать полностью</a>
+                            <a href="https://5sfer.com/24447-6-prostykh-shagov-kak-polyubit-sebya-ot-zhenshchiny-kotoraya-sebe-ne-nravilas.html" class="btn btn-blue" target="_blank">Читать полностью</a>
                         </div>
                     </div>
                 </div>
@@ -483,7 +483,7 @@
                     <div class="card_profile">
                         <div class="icon" style="background-image: url('img/sec_success_stories/vova.jpg');"></div>
                         <h3>Рафаэль Шустер</h3>
-                        <p>Муж и отец пятерых детей. Эксперт в области воспитания детей и подростков. Имеет 18-летний стаж в сфере образования. Преподаватель на проектах Stars, Stars Intensive и JDI в Институте Еврейского Развития в Москве. Коуч Нового Кода. Бизнес-тренер.</p>
+                        <p>Эксперт в области воспитания детей. 18-летний стаж в сфере образования.</p>
                         <i>“Спасибо большое за консультацию по тайм-менеджменту. Это просто круто! Я полностью пересмотрел своё время и результаты себя не заставили долго ждать”
                         </i>
                     </div>
@@ -492,9 +492,9 @@
                     <div class="card_profile">
                         <div class="icon" style="background-image: url('img/sec_success_stories/vitaliy.jpg');"></div>
                         <h3>Анжелика Сомик</h3>
-                        <p>Сертифицированный руководитель проектов (РМР), кандидат экономических наук, участник программы IPS "Профессиональный эксперт".</p>
+                        <p>Руководитель проектов (РМР), кандидат экономических наук.</p>
                         <i>“Наташа, благодарю за курс по тайм-менеджменту! Ваши фишки, инструменты, личный опыт полезен даже для продвинутых организаторов своей жизни. Внедрила в свою практику Матрицу планирования и метод камней. Спасибо за
-                            индивидуальный подход к каждому слушателю курса и мотивационную книгу! Прочитала ее запоем, ваша личная история очень вдохновляет!”
+                            индивидуальный подход к каждому слушателю курса и мотивационную книгу!”
                         </i>
                     </div>
                 </div>
