new land yomtov

--- a/index.html
+++ b/index.html
@@ -58,17 +58,13 @@
             <div class="row">
                 <div class="col-md-8">
                     <h1>Йомтов Шуфотинский</h1>
-                    <p class="undertitle">Эксперт по личным финансам. Бизнес тренер. Руководитель «Академии финансового благополучия».<br> Руководитель трех образовательных программ и благотворительного фонда.</p>
+                    <p class="undertitle">Маркетолог и чат-бот мастер. <br> Создатель воронок продаж в мессенджере.</p>
                     <div class="card">
                         <ul>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Помогает семьям увеличить доход и эффективно им управлять.</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Финансовый исследователь и практик.</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">22 года в образовании, как рыба в воде.</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">6 лет в предпринимательстве.</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Популярный автор на портале 5СФЕР.</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Счастливый муж и отец 3 детей.</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">11 лет руководит благотворительным фондом.</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Руководитель благотворительного проекта.</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">3 года маркетинговой зависимости</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">4 года ежедневного профессионального самообразования</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Постоянно прохожу тренинги и курсы по современной коммуникации с клиентом.</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Тысячи людей пообщались с моими чат-ботами.</li>
                         </ul>
                     </div>
                 </div>
@@ -95,19 +91,21 @@
                         <div class="soc_links_wrapp">
                             <a href="https://www.facebook.com/yomtov.shufotinski/" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
                             <a href="https://t.me/YomtovShufotinski" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>
-                            <a href="https://www.instagram.com/yomtov.shufotinski/" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
+                            <a href="https://www.instagram.com/yomtov.shufotinski/" class="item"><img src="img/soc_links/inst.svg" alt="in" width="26px"></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-7">
                     <div class="card">
                         <img src="img/sec_bio/quote.svg" alt="quote" class="quote">
-                        <p>Привет! <br> Меня зовут Йомтов Шуфотинский. Эксперт по личным и семейным финансам. Руковожу "Академией финансового благополучия". Провожу консультации, прямые эфиры и тренинги. </p>
-                        <p>Помогаю клиентам увеличить доход и эффективно им управлять.</p>
-                        <p>Я всю жизнь в образовании и предпринимательстве. Для меня применение знаний на практике, как выдох после вдоха. Считаю, что в финансах теория без практики бесполезна. Поэтому мое обучение нацелено на применение с целью увидеть результат.</p>
-                        <p>Считаю, что каждый человек, при сильном желании с работающими инструментами, способен создать жизнь, о которой мечтает.</p>
-                        <p>От финансового состояния зависят все сферы жизни. К счастливой жизни, легче прийти с финансовым благополучии. А помогать другим легче, когда сам не нуждаешься в помощи.</p>
-                        <p>В богатом обществе средний показатель радости, счастья и удовлетворенности жизни значительно выше. Поэтому, я хочу чтобы вы стали финансово обеспеченным.</p>
+                        <p>Привет! <br> Меня зовут Йомтов Шуфотинский. Я маркетолог и чат-бот мастер, создатель воронок продаж в мессенджере. Помогаю экспертам и предпринимателям увеличить продажи и создать теплые выгодные отношения с клиентами. </p>
+                        <p>Я влюблен в маркетинг и мне нравится систематизация и автоматизация. Решаю проблему экспертов и предпринимателей в нехватке клиентов. Я за клиентоориентированность.</p>
+                        <p>Думаю, что для каждого качественного продукта обязательно должен быть найден клиент. А каждый клиент должен с легкостью решить свою проблему, за что будет благодарен суммой денег.</p>
+                        <p>От количества продаж и связи с клиентом зависит доход. Сегодня клиенту нравится общение через переписку и он готов купить лишь нажимая кнопки.</p>
+                        <p>Помогаю клиенту увеличить продажи. Автоматизирую общение с аудиторией через мессенджер. Помогаю создать между моим клиентом и его потребителем теплые выгодные отношения.</p>
+                        <p>Собираю аудиторию на вебинар. Помогаю в проведении акций и мероприятий через мессенджер.</p>
+                        <p>Увеличиваю количество подписчиков на странице в соцсети. Создаю лид-магнит в мессенджере.</p>
+                        <p>Я готов стать вашим помощником в увеличении продаж и создании теплых отношений с клиентом.</p>
                     </div>
                 </div>
             </div>
@@ -122,13 +120,13 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col col-md-6 left-col">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://www.youtube.com/embed/ATaYxRJx1Ko" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/lWAKdYH9glo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="col-xl-7 col-md-6 right-col main-txt">
-                    <h2>Хочешь я стану твоим наставником увеличении дохода и эффективном его управлении?</h2>
-                    <p>С теми, кто жаждет результатов, я готов делиться практиками, инструментами и стратегиями финансового мышления.</p>
-                    <a href="#" class="btn btn-blue">
+                    <h2>Хотите я стану вашим помощником в увеличении продаж и создании теплых отношений с клиентом?</h2>
+                    <p>На себя беру изучение технологий, стратегий, инструментов и совершенствование навыков в создании маркетинговых воронок. А вам помогу освободить время, облегчить жизнь и бизнес.</p>
+                    <a href="https://t.me/YomtovShufotinski" target="_blank" class="btn btn-blue">
                         ДА, ХОЧУ
                     </a>
                 </div>
@@ -145,7 +143,7 @@
                 <img src="img/sec_my_projects/title_label.svg" alt="title_label">
                 <h2>Мои проекты</h2>
             </div>
-            <div class="card with-date">
+            <div class="card with-date" style="display:none">
                 <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
                 <div class="media align-items-center">
                     <div class="media-image-abs_wrapp">
@@ -201,67 +199,43 @@
                             <tbody>
                                 <tr>
                                     <th scope="row">1</th>
-                                    <td class="expertise">Личные финансы</td>
+                                    <td class="expertise">Маркетинг</td>
                                     <td>101</td>
                                     <td>3</td>
                                     <td>6</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://t.me/YomtovShufotinski" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">2</th>
-                                    <td class="expertise">Семейный бюджет</td>
+                                    <td class="expertise">Создание чат-ботов</td>
                                     <td>98</td>
                                     <td>6</td>
                                     <td>9</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://t.me/YomtovShufotinski" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">3</th>
-                                    <td class="expertise">Достижение целей</td>
+                                    <td class="expertise">Создание воронок продаж</td>
                                     <td>11</td>
                                     <td>3</td>
                                     <td>4</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://t.me/YomtovShufotinski" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">4</th>
-                                    <td class="expertise">Личная эффективность</td>
+                                    <td class="expertise">Написание публикаций</td>
                                     <td>76</td>
                                     <td>1</td>
                                     <td>11</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://t.me/YomtovShufotinski" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">5</th>
-                                    <td class="expertise">Тунели продаж</td>
+                                    <td class="expertise">Маркетинговые технологии</td>
                                     <td>4</td>
                                     <td>0</td>
                                     <td>20</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">5</th>
-                                    <td class="expertise">Чат-бот мастер</td>
-                                    <td>8</td>
-                                    <td>3</td>
-                                    <td>23</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">5</th>
-                                    <td class="expertise">Духовный рост</td>
-                                    <td>6</td>
-                                    <td>9</td>
-                                    <td>13</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">5</th>
-                                    <td class="expertise">Личностный рост</td>
-                                    <td>6</td>
-                                    <td>19</td>
-                                    <td>3</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://t.me/YomtovShufotinski" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -271,7 +245,7 @@
         </div>
     </section>
     <!-- sec_my_contacts -->
-    <section id="contacts" class="sec sec_my_contacts">
+    <section id="contacts" class="sec sec_my_contacts" style="background:#fff">
         <div class="container">
             <img alt="" class="abs_pic dubl_stone d-md-block d-none" src="img/abs_pic/dubl_stone.svg">
             <img alt="" class="abs_pic dubl_line_down" src="img/abs_pic/dubl_line.svg">
@@ -304,7 +278,7 @@
                                         <span>Константин Михайленков</span>
                                     </a>
                                 </td>
-                                <td class="expertise">Управление, Менеджмент, командообразование</td>
+                                <td class="expertise">Эксперт по системному менеджменту, бизнес-коуч</td>
                                 <td>26</td>
                                 <td>26</td>
                                 <td>54</td>
@@ -318,7 +292,7 @@
                                         <span>Виталий Тимошенко</span>
                                     </a>
                                 </td>
-                                <td class="expertise">Бизнес, Маркетинг, Продажи, Стартапы</td>
+                                <td class="expertise">маркетинг, личная эффективность, IT разработки, коуч</td>
                                 <td>26</td>
                                 <td>26</td>
                                 <td>26</td>
@@ -332,7 +306,7 @@
                                         <span>Ицхак Пинтосевич</span>
                                     </a>
                                 </td>
-                                <td class="expertise">Мотивация, Личная эффективность, коучинг</td>
+                                <td class="expertise">маркетинг, финансы, личная эффективность, здоровье, инвестирование, менеджмент, персонал, образование</td>
                                 <td>26</td>
                                 <td>26</td>
                                 <td>44</td>
@@ -345,7 +319,7 @@
         </div>
     </section>
     <!-- / sec_my_contacts -->
-    <section id="my_articles" class="sec sec_my_articles">
+    <section id="my_articles" class="sec sec_my_articles" style="display:none">
         <div class="container">
             <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
@@ -422,7 +396,7 @@
         </div>
     </section>
     <!-- sec_my_articles -->
-    <section class="sec sec_latest_events d-none">
+    <section class="sec sec_latest_events d-none" style="display:none">
         <div class="container">
             <div class="sec_title">
                 <img src="img/sec_latest_events/title_label.svg" alt="title_label">
@@ -450,7 +424,7 @@
     </section>
     <!-- / sec_my_articles -->
     <!-- sec_success_stories -->
-    <section id="reviews" class="sec sec_success_stories">
+    <section id="reviews" class="sec sec_success_stories" style="display:none">
         <div class="container">
             <img alt="" class="abs_pic stone_orange" src="img/abs_pic/stone_orange.svg">
             <img alt="" class="abs_pic stone_orange_bottom" src="img/abs_pic/stone_orange.svg">
@@ -501,7 +475,7 @@
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <div class="sec_title">
                 <img src="img/sec_your_mentor/title_label.svg" alt="title_label">
-                <h2>Хочешь я стану твоим наставников в увеличении дохода <br> и эффективном управлении личными финансами?</h2>
+                <h2>Хотите я стану вашим помощником в увеличении <br> продаж и создании теплых отношений с клиентом?</h2>
             </div>
             <div class="row">
                 <div class="col-md-6 img_wrapp">
@@ -509,7 +483,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://www.youtube.com/embed/ATaYxRJx1Ko" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/lWAKdYH9glo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <a href="#" class="btn btn-success">Да хочу!</a>
                 </div>
@@ -539,7 +513,7 @@
                     <div class="soc_links_wrapp mx-md-auto">
                         <a href="https://www.facebook.com/yomtov.shufotinski/" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
                         <a href="https://t.me/YomtovShufotinski" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>
-                        <a href="https://www.instagram.com/yomtov.shufotinski/" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
+                        <a href="https://www.instagram.com/yomtov.shufotinski/" class="item"><img src="img/soc_links/inst.svg" alt="in" width="26px"></a>
                     </div>
                 </div>
                 <div class="col-md-3 d-none">
