improve to final version

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
                             <li><img src="img/sec_1/ok.svg" alt="ok">Более 20-ти лет работаю тренером в сфере личной эффективности. Создатель и руководиль проекта 6-ти месячного обучения для руководителей «Школа лидеров».</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Провела более полусотни часовых программ на испанском радио.</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Участвовала в съёмках нескольких рекламных роликов для центрального телевидения.</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Создатель курсов по личной эффективности и тайм-менеджменту.</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Ведущая еженедельной авторской программы по личной эффективности на испанском радио.</li>
                         </ul>
                     </div>
                     <div class="works d-none">
@@ -176,7 +178,7 @@
                                 <img class="mr-1" src="img/icons/human.svg">
                                 1000
                             </div>
-                            <a class="link btn btn-blue" href="https://www.facebook.com/profile.php?id=100005443396592" target="_blank">Подробнее</a>
+                            <a class="link btn btn-blue" href="https://www.facebook.com/groups/410412566463058/" target="_blank">Подробнее</a>
                         </div>
                     </div>
                 </div>
