--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                 <td>26</td>
                                 <td>26</td>
                                 <td>44</td>
-                                <td class="text-right"><a href="https://p.smartexpert.net/social/mkp85kos" class="btn btn-blue">Подробнее</a></td>
+                                <td class="text-right"><a href="https://p.smartexpert.net/social/mkp85kos" class="btn btn-blue" target="_blank">Подробнее</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">2</th>
