--- a/index.html
+++ b/index.html
@@ -106,20 +106,24 @@
                     <div class="card">
                         <img src="img/sec_bio/quote.svg" alt="quote" class="quote">
                         <p>
-                            Привет! <br>
-                            Меня зовут Наташа Флорес. Уже более 20 лет я занимаюсь тренерской работой и коучингом с русскоязычной и испаноязычной аудиторией. Среди моих проектов: шестимесячный тренинг для руководителей «Школа Лидерства», офф-лайн и
-                            он-лайн курсы и лекции по личной эффективности и тайм-менеджменту, сотни коучинговых часов.
+                            Привет! <br> Меня зовут Наташа Флорес. Около 20 лет я занимаюсь тренерской работой и коучингом с русскоязычной и испаноязычной аудиторией. Среди моих проектов: тренинг для руководителей «Школа Лидерства», курсы и лекции по
+                            личной эффективности и тайм-менеджменту.
+                        </p>
+                        <p>
+                            За годы работы я помогла более 1000 человек найти свое предназначение, научиться стратегическому управлению временем, раскрыть и реализовать свой потенциал. Среди моих клиентов есть доктора и кандидаты в доктора наук,
+                            биржевые брокеры, журналисты, врачи, религиозные работники, родители и студенты.
+                        </p>
+                        <p>
+                            Я являюсь автором книг и статей по мотивации и целеполаганию, веду авторскую программу по личной эффективности на испанском радио.
+                            Большинство моих клиентов – это успешные люди, которые хотят большего. Те, кому жизненно необходимо навести порядок в жизни и работе. В ходе нашего сотрудничества мои ученики становятся экспертами в управлении временем,
+                            быстрее и легче достигают поставленные цели.
 
                         </p>
                         <p>
-                            Мой профессиональный путь начался на факультете экономики и маркетинга Украинского Финансово-Экономического Института. Параллельно я училась в американском библейском университете на факультете теологии. А после переезда в
-                            Испанию получила европейский диплом эксперта по гендерному праву на факультете психологии одного из престижнейших испанских университетов.Мой профессиональный путь начался на факультете экономики и маркетинга Украинского
-                            Финансово-Экономического Института. Параллельно я училась в американском библейском университете на факультете теологии. А после переезда в Испанию получила европейский диплом эксперта по гендерному праву на факультете
-                            психологии одного из престижнейших испанских университетов.
+                            Моя призвание – помогать целеустремленным людям достигать свои цели намного быстрее и, при этом, иметь сбалансированную счастливую жизнь во всех ее проявлениях.
                         </p>
                         <p>
-                            За время моей работы коучем и тренером я помогла около 1000 человек найти свое предназначение, научиться стратегическому управлению временем, раскрыть и реализовать свой потенциал. Среди моих клиентов есть доктора и
-                            кандидаты в доктора наук, биржевые брокеры, журналисты, врачи, религиозные работники, родители и студенты.
+                            Я готова стать вашим наставником в раскрытии вашего внутреннего потенциала, планировании и достижении поставленных задач.
                         </p>
                     </div>
                 </div>
@@ -135,7 +139,7 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col col-md-6 left-col">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://www.youtube.com/embed/YmTsafioaqg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/x48C6SWhDcA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="col-xl-7 col-md-6 right-col main-txt">
